--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,8 @@
       alt=""
     />
   </div>
-  <a href="https://deliver-ease-app.vercel.app/app-release.apk"><p class="text-xl pt-5 underline">Click to download</p></a> 
+  <!-- https://deliver-ease-app.vercel.app/ -->
+  <a href="/app-release.apk" download>
+    <p class="text-xl pt-5 underline">Click to download</p>
+  </a>
 </div>
