Working Qr final

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     />
   </div>
   <!-- https://deliver-ease-app.vercel.app/ -->
-  <a href="/app-release.apk" download>
+  <a href="https://deliver-ease-app.vercel.app/app-release.apk" download>
     <p class="text-xl pt-5 underline">Click to download</p>
   </a>
 </div>
