--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div
-  class="flex flex-col justify-center items-center h-screen text-white bg-slate-900 p-5"
->
-  <p class="text-[5rem] font-bold hidden sm:block">Scan Here</p>
+<div class="flex flex-col justify-center items-center h-screen text-white bg-slate-900 p-5 ">
+  <p class="text-[5rem] font-bold hidden sm:block">Scan Here </p>
   <div class="max-w-2xl w-full">
     <img
       class="rounded-3xl h-auto w-full object-contain"
@@ -10,7 +8,7 @@
     />
   </div>
   <!-- https://deliver-ease-app.vercel.app/ -->
-  <a href="/app-release.apk" download>
+  <a href="https://rb.gy/ityvyu" >
     <p class="text-xl pt-5 underline">Click to download</p>
   </a>
 </div>
