--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     />
   </div>
   <!-- https://deliver-ease-app.vercel.app/ -->
-  <a href="https://rb.gy/8rs3we" >
+  <a href="https://rb.gy/t9kqcp" >
     <p class="text-xl pt-5 underline">Click to download</p>
   </a>
 </div>
